--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,156 @@
-# pip install -r requirements.txt
-
-yolov5-icevision
+absl-py==0.9.0
+aiohttp==3.7.4.post0
+antlr4-python3-runtime==4.8
+anyio==3.2.1
+argon2-cffi @ file:///C:/ci/argon2-cffi_1613038019788/work
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
+blis==0.7.4
+cachetools==4.1.1
+catalogue==2.0.4
+certifi==2020.6.20
+cffi @ file:///C:/ci/cffi_1613247308275/work
+chardet==3.0.4
+click==7.1.2
+colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+cycler==0.10.0
+cymem==2.0.5
+Cython==0.29.23
+decorator==4.4.2
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+entrypoints==0.3
+fsspec==2021.6.1
+gast==0.3.3
+gitdb==4.0.7
+google-auth==1.19.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.30.0
+h5py==2.10.0
 icevision[all]
-
-# base ----------------------------------------
-Cython
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.2
-Pillow
-PyYAML>=5.3
-scipy>=1.4.1
-# tensorboard>=2.2
-torch>=1.7.0
-torchvision>=0.8.1
-tqdm>=4.41.0
-voila==0.2.4
-# logging -------------------------------------
-# wandb
-
-# plotting ------------------------------------
-seaborn
-pandas
-
-# export --------------------------------------
-# coremltools==4.0
-# onnx>=1.8.0
-# scikit-learn==0.19.2  # for coreml quantization
-
-# extras --------------------------------------
-thop  # FLOPS computation
-pycocotools>=2.0  # COCO mAP
+idna==2.10
+imageio==2.9.0
+imbalanced-learn==0.7.0
+imgaug==0.4.0
+importlib-metadata==1.7.0
+iopath==0.1.9
+ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1617121109687/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipywidgets==7.6.3
+jedi==0.17.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
+joblib==1.0.1
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
+jupyter-core @ file:///C:/ci/jupyter_core_1612213516947/work
+jupyter-server==1.9.0
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-widgets==1.0.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.2.2
+MarkupSafe @ file:///C:/ci/markupsafe_1621528383308/work
+matplotlib==3.3.0
+mistune @ file:///C:/ci/mistune_1594373272338/work
+multidict==5.1.0
+murmurhash==1.0.5
+nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
+nbconvert @ file:///C:/ci/nbconvert_1624479160228/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+networkx==2.5.1
+notebook @ file:///C:/ci/notebook_1621528807363/work
+numpy==1.18.5
+oauthlib==3.1.0
+opencv-python==4.5.2.54
+opencv-python-headless==4.5.2.54
+opt-einsum==3.3.0
+packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
+pandas==1.2.5
+pandocfilters @ file:///C:/ci/pandocfilters_1605102427207/work
+parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+pathy==0.6.0
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==8.2.0
+portalocker==2.3.0
+preshed==3.0.5
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools-windows==2.0.0.2
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pydantic==1.7.4
+pyDeprecate==0.3.0
+Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pyrsistent @ file:///C:/ci/pyrsistent_1600123688363/work
+PySide2==5.15.0
+python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+pytz==2021.1
+PyWavelets==1.1.1
+pywin32==227
+pywinpty==0.5.7
+PyYAML==5.4.1
+pyzmq==20.0.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.6
+scikit-image==0.18.1
+scikit-learn==0.23.1
+scipy==1.4.1
+seaborn==0.11.1
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+sentry-sdk==1.1.0
+Shapely==1.7.1
+shiboken2==5.15.0
+shortuuid==1.0.1
+six==1.15.0
+smart-open==5.1.0
+smmap==4.0.0
+sniffio==1.2.0
+spacy==3.0.6
+spacy-legacy==3.0.6
+srsly==2.4.1
+subprocess32==3.5.4
+tabulate==0.8.9
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0rc2
+termcolor==1.1.0
+terminado==0.9.4
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+thinc==8.0.6
+threadpoolctl==2.1.0
+tifffile==2021.6.14
+timm==0.4.9
+torch==1.8.1
+torchmetrics==0.3.2
+torchvision==0.9.1
+tornado @ file:///C:/ci/tornado_1606935947090/work
+tqdm==4.61.1
+traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
+typer==0.3.2
+typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
+urllib3==1.25.9
+voila==0.2.10
+wasabi==0.8.2
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webencodings==0.5.1
+websocket-client==1.1.0
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+win32-setctime==1.0.3
+wincertstore==0.2
+wrapt==1.12.1
+yacs==0.1.8
+yarl==1.6.3
+yolov5-icevision==4.0.0
+zipp==3.1.0
