--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,8 @@ preshed==3.0.5
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycocotools-windows==2.0.0.2
+#pycocotools-windows==2.0.0.2
+pycocotools
 #pycparser @ #file:///tmp/build/80754af9/pycparser_1594388511720/work
 pydantic==1.7.4
 pyDeprecate==0.3.0
