--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ PySide2==5.15.0
 #python-dateutil @ file:///home/ktietz/src/ci/python-#dateutil_1611928101742/work
 pytz==2021.1
 PyWavelets==1.1.1
-pywin32==227
+#pywin32==227
 pywinpty==0.5.7
 PyYAML==5.4.1
 pyzmq==20.0.0
